[package]
name = "bevy_pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy
bevy_app = "0.6.0"
bevy_core = "0.6.0"
bevy_ecs = "0.6.1"

# other
petgraph = "0.6.0"
rapier2d = "0.11.1"
rand = "0.8.5"
ordered-float = "2.10"

[dev-dependencies]
bevy = "0.6.1"
bevy_prototype_lyon = "0.4.0"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3